fixed z-index issue on dropdown

--- a/src/assets/sass/components/_navbar.scss
+++ b/src/assets/sass/components/_navbar.scss
@@ -121,7 +121,7 @@
       left: -20px;
       box-shadow: $base-box-shadow;
       min-width: 114px;
-      z-index: 1;
+      z-index: 11;
 
       animation: dropDownAnimation 0.3s ease-in-out;
       transform-origin: top;
